Modificação de id para String nome

--- a/projeto/src/main/webapp/Acompanhamento/Acompanhamento.xhtml
+++ b/projeto/src/main/webapp/Acompanhamento/Acompanhamento.xhtml
@@ -187,7 +187,7 @@
 				</p:column>
 				
 				<p:column headerText="Pessoa Referência">
-					<h:outputText value="#{acom.pessoaref}" />
+					<h:outputText value="#{acom.pessoaref.pessoareferencia}" />
 				</p:column>
 
 
