--- a/projeto/src/main/webapp/recuperarsenha.xhtml
+++ b/projeto/src/main/webapp/recuperarsenha.xhtml
@@ -19,7 +19,7 @@
     				<p:inputText value="#{usuarioBean.recuemail}" size="30" />
     				
     				<p:outputLabel value="CPF" />
-    				<p:inputMask mask="999.999.999-99" value="#{usuarioBean.recucpf}"  size="30" />
+    				<p:inputText  value="#{usuarioBean.recucpf}"  size="30" />
     				
     				<h:panelGroup/>
     				<p:commandButton action="#{usuarioBean.listRecuperarLogin()}"  value="Recuperar" />
