99% do projeto faltando algumas alterações de interface

--- a/projeto/src/main/webapp/Acompanhamento/question.xhtml
+++ b/projeto/src/main/webapp/Acompanhamento/question.xhtml
@@ -117,12 +117,10 @@
 				paginator="true" paginatorAlwaysVisible="true"
 				paginatorPosition="bottom">
 
-				<p:column headerText="ID">
-					<h:outputText value="#{quest.id}" />
-				</p:column>
-				<p:column headerText="Nome">
+				<p:column headerText="Acompanhante">
 					<h:outputText value="#{quest.nome}" />
 				</p:column>
+				
 				<p:column headerText="Questão 1">
 					<h:outputText value="#{quest.question1}" />
 				</p:column>
