Aplicando Spring Security
falta a aplicação do login.

--- a/projeto/src/main/webapp/Agendamento/Agendamento.xhtml
+++ b/projeto/src/main/webapp/Agendamento/Agendamento.xhtml
@@ -27,7 +27,7 @@
 					<p:menuitem value="Exibir Pessoa Referência"
 						url="/PessoaRef/ExibirPessoaRef.xhtml" />
 					<p:separator />
-					<p:menuitem value="Sair" url="//Login.xhtml" />
+					<p:menuitem value="Sair" url="/j_spring_security_logout" />
 				</p:submenu>
 
 				<p:submenu styleClass="menu" label="Acompanhamento"
@@ -39,8 +39,8 @@
 
 				<p:submenu styleClass="menu" label="Agendamento" icon="ui-icon-gear">
 					<p:menuitem value="Novo" url="/Agendamento/Agendamento.xhtml" />
-				</p:submenu>
-
+					</p:submenu>	
+					
 
 				<p:submenu styleClass="menu" label="Cadastrar Usuário"
 					icon="ui-icon-gear">
